--- a/index.html
+++ b/index.html
@@ -14,10 +14,10 @@
     <div class="body-container">
         <header>
             <div class="left">
-                <img src="/images/icon-menu.svg" id="menuBar">
-                <img src="/images/logo.svg" alt="">
+                <img src="./images/icon-menu.svg" id="menuBar">
+                <img src="./images/logo.svg" alt="">
                 <div class="nav" id="nav">
-                    <img src="/images/icon-close.svg" id="close">
+                    <img src="./images/icon-close.svg" id="close">
                     <ul>
                         <li>Collectiions</li>
                         <li>Men</li>
@@ -30,10 +30,10 @@
             <div class="right">
                 <ul>
                     <li class="cart-holder" id="cartIcon"><p id="num"></p>
-                        <img src="images/icon-cart.svg">
+                        <img src="./images/icon-cart.svg">
                         
                     </li>
-                    <li><img src="images/image-avatar.png"></li>
+                    <li><img src="./images/image-avatar.png"></li>
                 </ul>
             </div>
         </header>
@@ -50,8 +50,8 @@
                 <div class="lg-img">
                     <img src="./images/image-product-1.jpg" width="200px" id="main-img">
                     <div class="controls">
-                        <button id="prev"><img src="/images/icon-previous.svg" alt=""></button>
-                        <button id="next"><img src="/images/icon-next.svg" alt=""></button>
+                        <button id="prev"><img src="./images/icon-previous.svg" alt="Prev"></button>
+                        <button id="next"><img src="./images/icon-next.svg" alt="Next"></button>
                     </div>
                 </div>
                 <div class="thumbs">
@@ -80,9 +80,9 @@
 
                 <div class="amount">
                     <div class="count">
-                        <img src="/images/icon-minus.svg" alt="" id="minus">
+                        <img src="./images/icon-minus.svg" alt="" id="minus">
                         <div id="count">0</div>
-                        <img src="/images/icon-plus.svg" alt="" id="plus">
+                        <img src="./images/icon-plus.svg" alt="" id="plus">
                     </div>
                     <button><img src="./images/icon-cart.svg" alt="">Add to Cart</button>
                 </div>
@@ -92,6 +92,6 @@
 
     </div>
 
-    <script src="/script.js"></script>
+    <script src="./script.js"></script>
 </body>
 </html>
